--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}\\app.js"
+      "program": "${workspaceFolder}\\app.js",
+      "runtimeExecutable": "${workspaceFolder}\\node_modules\\.bin\\nodemon"
     }
   ]
 }
