--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
-    "compile-sass": "sass public-src/styles:public/styles --style compressed --no-source-map",
+    "compile-sass": "public-src/styles/index.scss:public/styles/index.css --style compressed --no-source-map",
     "watch-sass": "sass public-src/styles:public/styles --watch"
   },
   "repository": {
@@ -41,7 +41,12 @@
     "express": "^5.0.0-beta.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "file-type": "^18.0.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "yaml": "^2.1.3"
   }
 }
