--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.55.0"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -43,6 +44,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "file-type": "^18.0.0",
+    "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
